--- a/css/styles.css
+++ b/css/styles.css
@@ -229,6 +229,7 @@ h3 {
   flex-basis: calc((100% - 3 * 24px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #FFF;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .initials-container {
   padding: 32px 0;
@@ -247,6 +248,26 @@ h3 {
   color: #434455;
   line-height: 1.5;
   letter-spacing: 0.02em;
+}
+.socils-list{
+  display: flex;
+  justify-content: space-around;
+  margin-top: 8px;
+}
+.socils-icon{
+display: flex; 
+width: 40px;
+height: 40px;
+border-radius: 50%;
+border: 1px solid #4D5AE5;
+background:#4D5AE5;
+align-items: center;
+justify-content: center;
+fill:#F4F4FD;
+}
+.socils-icon:hover{
+  background-color: #31D0AA;
+  border: 1px solid #31D0AA;
 }
 
 /* Section 4 */
@@ -271,6 +292,30 @@ h3 {
 }
 .pic-border {
   flex-basis: calc((100% - 48px) / 3);
+  overflow: hidden;
+}
+.overlay{
+  background-color: #4D5AE5;
+  color: #fff;
+  color: var(--CLOUD, #F4F4FD);
+  font-family: Roboto;
+  font-size: 16px;
+
+  line-height: 24px; 
+  letter-spacing: 0.32px;
+  padding-top: 40px;
+  padding-left: 32px;
+  padding-right: 32px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 360px;
+  height: 300px;
+  transform: translatey(800%);
+  transition: transform 250ms ease-in-out;
+}
+.pic-border:hover.overlay{
+  
 }
 .app-loc {
   padding: 32px 16px;
@@ -300,6 +345,26 @@ h3 {
   color: #f4f4fd;
   letter-spacing: 0.02em;
   max-width: 264px;
+  
+}
+.footer-div-social{
+  margin-left: 540px;
+}
+
+.footer-icon-decr{
+display: flex;
+font-family: Roboto;
+font-size: 16px;
+font-weight: 500;
+line-height: 24px;
+letter-spacing: 0.32px;
+color: #FFF;
+margin-bottom: 16px;
+}
+.footer-socils-list{
+  display: flex;
+  gap:16px;
+
 }
 .footer-desc {
   background-color: #2e2f42;
