--- a/css/styles.css
+++ b/css/styles.css
@@ -79,6 +79,21 @@ h3 {
 .header-list:focus {
   color: #404bbf;
 }
+.current{
+position: relative;
+color:  #404BBF;
+}
+.current::after{
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 100%;
+  bottom: -1px;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404BBF;
+
+}
 .adress {
   font-style: normal;
 }
@@ -292,29 +307,36 @@ fill:#F4F4FD;
 }
 .pic-border {
   flex-basis: calc((100% - 48px) / 3);
+}
+
+.pic-border:hover{
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-box {
+  position: relative;
   overflow: hidden;
 }
 .overlay{
   background-color: #4D5AE5;
-  color: #fff;
   color: var(--CLOUD, #F4F4FD);
   font-family: Roboto;
   font-size: 16px;
-
-  line-height: 24px; 
-  letter-spacing: 0.32px;
+  line-height: 1.5; 
+  letter-spacing: 0.02еm;
   padding-top: 40px;
   padding-left: 32px;
   padding-right: 32px;
   position: absolute;
   top: 0;
   left: 0;
-  width: 360px;
-  height: 300px;
-  transform: translatey(800%);
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
   transition: transform 250ms ease-in-out;
 }
-.pic-border:hover.overlay{
+.portfolio-box:hover .overlay{
+  transform: translateY(0%);
   
 }
 .app-loc {
@@ -347,6 +369,10 @@ fill:#F4F4FD;
   justify-content: start;
   align-items: baseline;
 }
+.footer-complex-div{
+  margin-right: 120px;
+}
+  
 .footer-logo {
   font-family: "Raleway", sans-serif;
   color: #4d5ae5;
@@ -373,10 +399,6 @@ fill:#F4F4FD;
   color: #f4f4fd;
 }
 /* Socilals */
-
-.footer-icons-div{
-  
-}
 .footer-icon-decr{
 display: flex;
 font-family: Roboto;
@@ -388,14 +410,12 @@ color: #FFF;
 margin-bottom: 16px;
 align-items: center;
 display: inline-block;
-margin-left: 540px;
 
 }
 .footer-socils-list{
   display: flex;
   gap:16px;
   align-items: center;
-  margin-left: 540px;
   max-width: 264px; 
   
 }
