--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ h3 {
 /* Header start */
 .header-border {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow:0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08); 
 }
 .header-inner {
   display: flex;
