--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,7 @@ h3 {
 .current{
 position: relative;
 color:  #404BBF;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .current::after{
   content: '';
