--- a/css/styles.css
+++ b/css/styles.css
@@ -108,6 +108,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: #434455;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .header-contacts:hover,
 .header-contacts:focus {
