--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   min-width: 169px;
   height: 56px;
   border: none;
+  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-service-button:hover,
 .order-service-button:focus {
