--- a/css/styles.css
+++ b/css/styles.css
@@ -273,6 +273,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   justify-content: space-around;
   margin-top: 8px;
+  justify-content: center;
+  gap: 24px;
 }
 
 .socils-icon{
