--- a/css/styles.css
+++ b/css/styles.css
@@ -276,6 +276,10 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   justify-content: center;
   gap: 24px;
 }
+.socials-list-li{
+  width: 40px;
+  height: 40px;
+}
 
 .socils-icon{
   display: flex; 
