--- a/css/styles.css
+++ b/css/styles.css
@@ -293,7 +293,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
   }
   .socils-icon:hover{
-    background-color: #31D0AA;
+    background-color: #404bbf;
     border: 1px solid #31D0AA;
   }
   .color-svg{
