--- a/css/styles.css
+++ b/css/styles.css
@@ -290,6 +290,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background:#4D5AE5;
   align-items: center;
   justify-content: center;
+  transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
   }
   .socils-icon:hover,
   .socils-icon:focus{  
