--- a/css/styles.css
+++ b/css/styles.css
@@ -322,6 +322,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .pic-border {
   flex-basis: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .pic-border:hover{
