--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-family: Roboto;
   font-size: 16px;
   line-height: 1.5; 
-  letter-spacing: 0.02еm;
+  letter-spacing: 0.02em;
   padding-top: 40px;
   padding-left: 32px;
   padding-right: 32px;
