--- a/css/styles.css
+++ b/css/styles.css
@@ -340,9 +340,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: 16px;
   line-height: 1.5; 
   letter-spacing: 0.02em;
-  padding-top: 40px;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding: 40px 32px; 
   position: absolute;
   top: 0;
   left: 0;
