--- a/css/styles.css
+++ b/css/styles.css
@@ -347,7 +347,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 100%;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-box:hover .overlay{
   transform: translateY(0%);
