--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   .socils-icon:hover,
   .socils-icon:focus{  
     background-color: #404bbf;
-    border: 1px solid #31D0AA;
+    border: 1px solid #4D5AE5;;
   }
   .color-svg{
     fill:#F4F4FD;
@@ -443,7 +443,8 @@ align-items: center;
 justify-content: center;
 
 }
-.footer-socils-icon:hover{
+.footer-socils-icon:hover,
+.footer-socils-icon:focus{
   background-color: #31D0AA;
   border: 1px solid #31D0AA;
 }
