--- a/css/styles.css
+++ b/css/styles.css
@@ -441,6 +441,7 @@ border: 1px solid #4D5AE5;
 background:#4D5AE5;
 align-items: center;
 justify-content: center;
+transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .footer-socils-icon:hover,
