--- a/css/styles.css
+++ b/css/styles.css
@@ -452,6 +452,10 @@ transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .footer-color-svg{
   fill:#F4F4FD; 
 }
+.socials-list-li-footer{
+  width: 40px; 
+  height: 40px;
+}
 
 
 
