--- a/css/styles.css
+++ b/css/styles.css
@@ -130,11 +130,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 	),
 	url(../images/main-background.jpg);
   max-width: 1440px;
+  
 
 }
 .section-decoration {
   background-color: #2e2f42;
   padding: 188px 0;
+  margin: 0 auto;
 }
 .main-header {
   font-size: 56px;
@@ -349,9 +351,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.portfolio-box:hover .overlay{
-  transform: translateY(0%);
-  
+.pic-border:hover .overlay{
+  transform: translateY(0%); 
 }
 .app-loc {
   padding: 32px 16px;
